# BigDataMachineLearning-MatrixTheory

./: README.md  pyproject.toml
examples/: 01_eckart_young_randomized_svd.py  02_jl_sketched_regression.py  03_pca_intrinsic_dimension.py  04_spectral_power_nystrom.py
src/matrixml/: __init__.py  lowrank.py  nystrom.py  pca.py  power.py  sketching.py  spectral.py
tests/: test_matrixml.py
