[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-ml"
version = "0.1.0"
description = "Matrix theory as the engine of big-data machine learning: Eckart-Young, randomized SVD, Johnson-Lindenstrauss sketching, PCA, spectral clustering, PageRank, and Nystrom, all made computational."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["linear-algebra", "randomized-numerical-linear-algebra", "machine-learning", "sketching", "svd", "spectral-clustering"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
